actionstring too long fix

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -323,6 +323,8 @@
 #editor .overlay .actionstring {
   margin: 7px 16px 3px;
   font-size: 12pt;
+  width: 300px;
+  text-align: right;
 }
 
 #editor .overlay .questionview {
